2006-10-17  Florian Boor <fb@kernelconcepts.de>

	* Release version 1.0
	* Update release stuff to build bzip2 compressed archives and
	  use new upload location.

2006-10-14  Florian Boor <fb@kernelconcepts.de>

	* Initial import of screenshot tool derived from gpe-screenshot 
          by Rene Wagner.