@@ -1,4 +1,4 @@
-AC_INIT([GPE Screenshot], [1.0], [gpe-list@linuxtogo.org], [gpe-scap])
+AC_INIT([GPE Screenshot], [1.1], [gpe-list@linuxtogo.org], [gpe-scap])
 
 AC_CONFIG_SRCDIR([src/gpe-scap.c])
 AM_CONFIG_HEADER(config.h)
@@ -24,7 +24,7 @@ AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
 dnl libraries
-GTK_MODULES="gtk+-2.0 >= 2.6.0 gthread-2.0"
+GTK_MODULES="gtk+-2.0 >= 2.6.0 gthread-2.0 libsoup-2.2"
 PKG_CHECK_MODULES(GTK, $GTK_MODULES)
 AC_SUBST(GTK_CFLAGS)
 AC_SUBST(GTK_LIBS)
