@@ -1,5 +1,6 @@
-/* GPE Screenshot
+/* GPE SCAP
  * Copyright (C) 2005  Rene Wagner <rw@handhelds.org>
+ * Copyright (C) 2006  Florian Boor <florian@linuxtogo.org>
  * 
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -17,10 +18,136 @@
  */
 
 #include <string.h>
+#include <sys/utsname.h>
+#include <libsoup/soup.h>
+
 #include "scr-shot.h"
 #include "scr-i18n.h"
 
-#define EXTERNAL_UPLOAD_COMMAND PKGDATADIR "/scap-png-upload %s"
+#define SEP "--2643816081578981947558109727"
+
+#define FAMILIAR_VINFO 	"/etc/familiar-version"
+#define OPENZAURUS_VINFO 	"/etc/openzaurus-version"
+#define ANGSTROM_VINFO 	"/etc/angstrom-version"
+#define DEBIAN_VINFO 	"/etc/debian_version"
+#define FAMILIAR_TIME 	"/etc/familiar-timestamp"
+#define OE_VERSION 		"/etc/version"
+#define P_CPUINFO 		"/proc/cpuinfo"
+
+gchar *
+get_device_model (void)
+{
+  gchar *result;
+  struct utsname uinfo;
+  gchar **strv;
+  gint i = 0;
+  gchar *str = NULL;
+
+  uname (&uinfo);
+
+  /* get cpu info, only ARM for now */
+  if (g_file_get_contents (P_CPUINFO, &str, NULL, NULL))
+    {
+      strv = g_strsplit (str, "\n", 128);
+      g_free (str);
+      while (strv[i])
+        {
+          if (strstr (strv[i], "Hardware"))
+            {
+              result = g_strdup (strchr (strv[i], ':') + 1);
+              g_strstrip (result);
+              break;
+            }
+          i++;
+        }
+      g_strfreev (strv);
+    }
+#ifdef __arm__
+  result = g_strdup (_("ARM, %s"), uinfo.machine);
+#endif
+#ifdef __i386__
+  result =
+    g_strdup_printf ("%s, %s", _("IBM PC or compatible"), uinfo.machine);
+#endif
+#ifdef __mips__
+#ifdef __sgi__
+  result = g_strdup (_("Silicon Graphics Machine"));
+#else
+  result = g_strdup (_("MIPS, %s"), uinfo.machine);
+#endif
+#endif
+#ifdef _POWER
+#endif
+  if (!result)
+    result = g_strdup_printf ("%s", uinfo.machine);
+
+  return result;
+}
+
+
+gchar *
+get_distribution_version (void)
+{
+  gchar *result = NULL;
+  gchar *tmp = NULL;
+
+  /* check for Familiar */
+  if (g_file_get_contents (FAMILIAR_VINFO, &tmp, NULL, NULL))
+    {
+      if (strchr (tmp, '\n'))
+        strchr (tmp, '\n')[0] = 0;
+      /*TRANSLATORS: "Familiar" is the name of a linux distribution. */
+      result = g_strdup_printf ("%s %s", _("Familiar"),
+			                    g_strstrip (strstr (tmp, " ")));
+      g_free (tmp);
+      return result;
+    }
+
+  /* check for OpenZaurus */
+  if (g_file_get_contents (OPENZAURUS_VINFO, &tmp, NULL, NULL))
+    {
+      if (strchr (tmp, '\n'))
+        strchr (tmp, '\n')[0] = 0;
+      /*TRANSLATORS: "OpenZaurus" is the name of a linux distribution. */
+      result =	g_strdup_printf ("%s %s", _("OpenZaurus"),
+                                 g_strstrip (strstr (tmp, " ")));
+      g_free (tmp);
+      return result;
+    }
+
+  /* check for Debian */
+  if (g_file_get_contents (DEBIAN_VINFO, &tmp, NULL, NULL))
+    {
+      /*TRANSLATORS: "Debian" is the name of a linux distribution. */
+      result = g_strdup_printf ("%s %s", _("Debian"), g_strstrip (tmp));
+      g_free (tmp);
+      return result;
+    }
+
+  /* check for Angstrom */
+  if (g_file_get_contents (ANGSTROM_VINFO, &tmp, NULL, NULL))
+    {
+      if (strchr (tmp, '\n'))
+          strchr (tmp, '\n')[0] = 0;
+      /*TRANSLATORS: "Ångström" is the name of a linux distribution. */
+      result = g_strdup_printf ("%s %s", _("Ångström"),
+			                    g_strstrip (strstr (tmp, " ")));
+      g_free (tmp);
+      return result;
+    }
+
+  /* check for OpenEmbedded */
+  if (g_file_get_contents (OE_VERSION, &tmp, NULL, NULL))
+    {
+      /*TRANSLATORS: "OpenEmbedded" is the name of a linux distribution. */
+      result = g_strdup_printf (_("OpenEmbedded"));
+      g_free (tmp);
+      return (result);
+    }
+
+  return result;
+}
+
 
 GQuark
 scr_shot_error_quark (void)
@@ -34,72 +161,70 @@ scr_shot_error_quark (void)
 }
 
 gboolean
-scr_shot_upload_from_file (const gchar *path, const gchar *url, gchar **response, GError **error)
+scr_shot_upload_from_file (const gchar * path, const gchar * url,
+			   gchar ** response, GError ** error)
 {
-  gchar *cmd;
-  gchar *std_output = NULL;
-  gchar *std_error = NULL;
+  gchar *cmd, *tail, *sdata = NULL;
   gchar *start, *end;
-  gint retval = 0;
-  GError *err = NULL;
+  gsize len, content_len;
+  char *body;
+  gchar *model = get_device_model ();
+  gchar *description = get_distribution_version ();
 
-  /* upload screenshot using external command. */
-  cmd = g_strdup_printf (EXTERNAL_UPLOAD_COMMAND, path);
-  g_spawn_command_line_sync (cmd, &std_output, &std_error, &retval, &err);
+  SoupSession *session;
+  SoupMessage *message;
+
+  /* read file into memory again */
+  g_file_get_contents (path, &sdata, &len, NULL);
+
+  /* create session and message */
+  session = soup_session_sync_new ();
+  message = soup_message_new ("POST", url);
+  soup_message_add_header (message->request_headers, "User-Agent", "gpe-scap/" VERSION);
+  soup_message_add_header (message->request_headers, "Accept",
+			   "text/xml,application/xml,application/xhtml+xml,text/html;q=0.9,text/plain;q=0.8,image/png,*/*;q=0.5");
+
+  /* build message body */
+  cmd = g_strdup_printf("--" SEP "\nContent-Disposition: form-data; name=\"model\"\n\n%s"
+       "\n" "--" SEP "\nContent-Disposition: form-data; name=\"text\"\n\n%s" 
+    "\n" "--" SEP "\nContent-Disposition: form-data; name=\"key\"\n\nsecret"
+    "\n" "--" SEP "\nContent-Disposition: form-data; name=\"submit\"\n\nUpload" 
+    "\n" "--" SEP "\nContent-Disposition: form-data; name=\"file\"; filename=\"/tmp/screenshot.png\""
+    "\nContent-Type: image/png\nContent-Transfer-Encoding: binary\n\n",model, description);
+
+  tail = "\n" SEP "--";
+
+  content_len = strlen (tail) + strlen (cmd) + len;
+  body = g_malloc (content_len);
+  memcpy (body, cmd, strlen (cmd));
+  memcpy (body + strlen (cmd), sdata, len);
+  memcpy (body + strlen (cmd) + len, tail, strlen (tail));
+
+  soup_message_set_request (message, "multipart/form-data; boundary=" SEP,
+                            SOUP_BUFFER_SYSTEM_OWNED, body, content_len);
+
+  soup_session_send_message (session, message);
+
   g_free (cmd);
+  g_free (sdata);
+  g_free (model);
+  g_free (description);
 
-  if (err)
+  /* Check the return value from the server. */
+  if (!SOUP_STATUS_IS_SUCCESSFUL (message->status_code))
     {
-      if (err->message)
-        {
-          if (error)
-            *error = g_error_new (SCR_SHOT_ERROR,
-                                  SCR_SHOT_ERROR_UPLOAD,
-                                  "%s", err->message);
-	  g_error_free (err);
-	}
-      else
-        {
-          if (error)
-            *error = g_error_new (SCR_SHOT_ERROR,
-                                  SCR_SHOT_ERROR_UPLOAD,
-                                  _("Upload failed."));
-	}
 
+      *error = g_error_new (SCR_SHOT_ERROR, SCR_SHOT_ERROR_UPLOAD,
+			    "%s (%i)", _("Unable to upload screenshot"),
+			    message->status_code);
+      g_object_unref (message);
       return FALSE;
     }
 
-  if (retval % 255)
-    {
-      g_warning ("External command returned exit code: %d", retval % 255);
-
-      if (std_error)
-        {
-          if (error)
-            *error = g_error_new (SCR_SHOT_ERROR,
-                                  SCR_SHOT_ERROR_UPLOAD,
-                                  "%s", std_error);
-	}
-      else
-        {
-          if (error)
-            *error = g_error_new (SCR_SHOT_ERROR,
-                                  SCR_SHOT_ERROR_UPLOAD,
-                                  _("External upload command returned exit code: %d"), retval % 255);
-	}
-
-      return FALSE;
-    }
-
-  if (std_output && response)
-    {
-      start = strstr (std_output, "Your image");
-      end = strstr (std_output, ".png") + 4;
-
-      *response = g_malloc (end - start + 2);
-      strncpy (*response, start, end - start + 1);
-      (*response)[end - start + 1] = 0;
-    }
-
+  if (response)
+    *response =
+       g_strdup (_("Your screenshot is available at http://scap.linuxtogo.org"));
+  
+  g_object_unref (message);
   return TRUE;
 }
