@@ -1,3 +1,12 @@
+2006-11-19  Florian Boor <fb@kernelconcepts.de>
+
+    * scr-shot-common.c: Use libsoup for uploading screnshot.
+                         Upload to scap.linuxtogo.org.
+                         Include some device information.
+    * gpe-scap.c: likewise, define upload location
+    * gpe-scap.glade: Update info strings
+    * scap-png-upload: More or less working for scap.linuxtogo.org.
+
 2006-10-17  Florian Boor <fb@kernelconcepts.de>
 
 	* Release version 1.0
